--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
   <body>
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+      <p>James DeLapa<br><span>Course Participant</span></p>
     </header>
 
     <div class="container">
       <div class="hero">
-        <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
+        <strong>I love web development!</strong> This is a sample site. As such, It has sample data. I will update it before project completion to make sure I receive passing marks.
       </div>
 
       <div class="content">
